tests/baselines/reference/noEmitAndComposite.errors.txt
/tsconfig.json(3,9): error TS5053: Option 'noEmit' cannot be specified with option 'composite'.
/tsconfig.json(4,9): error TS5053: Option 'noEmit' cannot be specified with option 'composite'.


==== /tsconfig.json (2 errors) ====
    {
        "compilerOptions": {
            "noEmit": true,
            ~~~~~~~~
!!! error TS5053: Option 'noEmit' cannot be specified with option 'composite'.
            "composite": true
            ~~~~~~~~~~~
!!! error TS5053: Option 'noEmit' cannot be specified with option 'composite'.
        }
    }
    
==== /a.ts (0 errors) ====
    const x = 10;
    